# callpilot

./: .gitignore  LICENSE  README.md
backend/: README.md  pyproject.toml
backend/app/: auth.py  config.py  logging_utils.py  main.py  schemas.py  store.py
backend/app/data/: providers_demo.json
backend/app/services/: calendar.py  distance.py  providers.py  scoring.py
backend/app/swarm/: manager.py  models.py
backend/app/telephony/: audio.py  media_stream.py  twilio_client.py  twiml.py
backend/app/voice/: eleven_client.py  prompts.py  tools_registry.py
backend/tests/: test_api.py  test_scoring.py
frontend/: package-lock.json  tailwind.config.ts
frontend/.lovable/: plan.md
frontend/src/: App.tsx  index.css
frontend/src/components/: AgentResults.tsx  BookingProgress.tsx  BookingSuccess.tsx  CampaignProgress.tsx  ConfirmSlot.tsx  ConfirmationSuccess.tsx  GoogleCalendarButton.tsx  LocationInput.tsx  ProviderMap.tsx  ProviderSelection.tsx  ResultsList.tsx  SearchForm.tsx
frontend/src/hooks/: useCampaign.ts  useGoogleAuth.ts
frontend/src/lib/: api.ts
frontend/src/pages/: BookAppointment.tsx  Index.tsx  LandingPage.tsx
frontend/src/types/: campaign.ts
