[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "callpilot"
version = "0.1.0"
description = "Agentic Voice AI for Autonomous Appointment Scheduling"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "tenacity>=9.0.0",
    "twilio>=9.0.0",
    "websockets>=13.0",
    "audioop-lts>=0.2.1; python_version>='3.13'",
]

[project.optional-dependencies]
google = [
    "google-api-python-client>=2.140.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
